--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/splash"
-        android:label="Pack Your Bag"
+        android:label="TripMate"
         android:roundIcon="@drawable/splash"
         android:supportsRtl="true"
         android:theme="@style/Theme.PackYourBag"
